# Stock_tw_2

./: .gitignore  AGENTS.md  README.md  all_symbols.txt  pyproject.toml
configs/: default.yaml  roles.yaml
examples/: sample_coder_response.json  sample_planner_response.json  sample_qa_response.json  sample_task.json  success_case_minimal_skeleton_artifacts.md  success_case_minimal_skeleton_input.md  success_case_minimal_skeleton_output.json
orchestrator/: __init__.py  config.py  main.py  models.py  pipeline.py
prompts/: Orchestrator.md  coder.md  manager.md  planner.md  qa.md
reports/: 2368_2025-05-10_2025-05-25.csv  3081_2025-11-17_2025-11-21.csv  3105_2025-10-25_2025-11-01.csv  6187_2026-02-05_2026-02-11.csv  8299_2025-09-01_2025-09-05.csv  qizhang_20250901_20250906.csv
scripts/: all_symbols.txt  all_symbols_meta.json  run_pullback_6_parallel.ps1  run_pullback_backtest_all.ps1  run_single_strategy_chunk_parallel.ps1  stat_selection_fail_reasons.py  stat_selection_fail_reasons_v2.py
specs/: README.md  task-001-daily-selection-date-range.md  task-002-stock-report-date-range.md  task-003-qizhang-strategy-report-alignment.md  task-004-qizhang-daily-selection-csv-detail.md  task-005-csv-image-artifacts.md  task-006-selection-forward-report.md  task-007-strategy-improve-bucketed-stock-report.md  task-008-stock-report-expanded-metrics.md  task-009-strategy-improve-all-signal-forward.md  task-010-strategy-improve-refresh-analysis-provider.md  task-011-strategy-improve-random-year-range.md  task-012-qizhang-improve-strategy.md
src/: __init__.py  main.py  sample.py
(+429 files in other folders)
